--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,663 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+/*
+=============== 
+Variables
+===============
+*/
+
+:root {
+    /* dark shades of primary color*/
+    --clr-primary-1: hsl(205, 86%, 17%);
+    --clr-primary-2: hsl(205, 77%, 27%);
+    --clr-primary-3: hsl(205, 72%, 37%);
+    --clr-primary-4: hsl(205, 63%, 48%);
+    /* primary/main color */
+    --clr-primary-5: hsl(205, 78%, 60%);
+    /* lighter shades of primary color */
+    --clr-primary-6: hsl(205, 89%, 70%);
+    --clr-primary-7: hsl(205, 90%, 76%);
+    --clr-primary-8: hsl(205, 86%, 81%);
+    --clr-primary-9: hsl(205, 90%, 88%);
+    --clr-primary-10: hsl(205, 100%, 96%);
+    /* darkest grey - used for headings */
+    --clr-grey-1: hsl(209, 61%, 16%);
+    --clr-grey-2: hsl(211, 39%, 23%);
+    --clr-grey-3: hsl(209, 34%, 30%);
+    --clr-grey-4: hsl(209, 28%, 39%);
+    /* grey used for paragraphs */
+    --clr-grey-5: hsl(210, 22%, 49%);
+    --clr-grey-6: hsl(209, 23%, 60%);
+    --clr-grey-7: hsl(211, 27%, 70%);
+    --clr-grey-8: hsl(210, 31%, 80%);
+    --clr-grey-9: hsl(212, 33%, 89%);
+    --clr-grey-10: hsl(210, 36%, 96%);
+    --clr-white: #fff;
+    --clr-red-dark: hsl(360, 67%, 44%);
+    --clr-red-light: hsl(360, 71%, 66%);
+    --clr-green-dark: hsl(125, 67%, 44%);
+    --clr-green-light: hsl(125, 71%, 66%);
+    --clr-black: #222;
+    --transition: all 0.3s linear;
+    --spacing: 0.1rem;
+    --radius: 0.25rem;
+    --light-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+    --dark-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+    --max-width: 1170px;
+    --fixed-width: 620px;
+  }
+  /*
+  =============== 
+  Global Styles
+  ===============
+  */
+  
+  *,
+  ::after,
+  ::before {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+  body {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+      Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: var(--clr-grey-1);
+    line-height: 1.5;
+    font-size: 0.875rem;
+  }
+  ul {
+    list-style-type: none;
+  }
+  a {
+    text-decoration: none;
+  }
+  p {
+    margin-bottom: 1.25rem;
+    color: var(--clr-grey-5);
+  }
+  
+  .banner-img{
+    background: url(./assest/hero_1_a.jpg);
+    height: 90vh;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+    clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
+  }
+  
+  /*
+  =============== 
+  Navbar
+  ===============
+  */
+  /* logo styling (RMW) */
+  .logo-text{
+    font-size: 40px;
+    font-family: 'Open Sans', sans-serif;
+    color: rgb(0,0,0);
+    animation: moveInLeft;
+    animation-duration: 2s;
+    animation-timing-function: ease-out;
+  }
+  /* End of logo styling */
+  
+  
+  nav {
+    background: var(--clr-white);
+    box-shadow: var(--light-shadow);
+  }
+  .nav-header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 1rem;
+    color: rgb(0,0,0);
+  }
+  .nav-toggle {
+    font-size: 1.9rem;
+    color: var(--clr-primary-5);
+    background: transparent;
+    border-color: transparent;
+    transition: var(--transition);
+    cursor: pointer;
+  }
+  .nav-toggle:hover {
+    color: var(--clr-primary-1);
+    transform: rotate(90deg);
+  }
+  
+  .logo {
+    height: 40px;
+  }
+  
+  .links a {
+    color: rgb(0,0,0);
+    font-size: 1rem;
+    text-transform: capitalize;
+    letter-spacing: var(--spacing);
+    display: block;
+    padding: 0.5rem 1rem;
+    transition: var(--transition);
+  }
+  
+  .links a:hover {
+    background: var(--clr-primary-8);
+    color: var(--clr-primary-5);
+    padding-left: 1.5rem;
+  }
+  
+  .links-container {
+    height: 0;
+    overflow: hidden;
+    transition: var(--transition);
+  }
+  .show-container {
+    height: 10rem;
+  }
+  
+  
+  .banner-text{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+  
+  .banner-text  h1{
+    color: #000;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 800;
+    font-size: 4rem;
+    animation: moveInLeft;
+    animation-duration: 2s;
+  }
+  .heading-primary-main{
+    animation: moveInLeft;
+    animation-duration: 2s;
+    animation-timing-function: ease-out;
+  }
+  .banner-text h2{
+    color: #000;
+    font-family: 'Rubik', sans-serif;
+    font-size: 2rem;
+    margin-bottom: 50px;
+  }
+  .btn:link,
+  .btn:visited {
+    text-transform: uppercase;
+    text-decoration: none;
+    padding: 15px 50px;
+    display: inline-block;
+    border-radius: 100px;
+    position: relative;
+  }
+  .btn:hover {
+    transform: translateY(-3px);
+  }
+  .btn:active {
+    transform: translateY(-1px);
+  }
+  .btn-white {
+    background-color: #007BFF;
+    color: #777;
+  }
+  .btn::after {
+    content: "";
+    display: inline-block;
+    height: 100%;
+    width: 100%;
+    border-radius: 100px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    transition: all 0.4s;
+  }
+  .btn-white::after {
+    background-color: #007BFF;
+  }
+  .btn:hover::after {
+    transform: scaleX(1.5) scaleY(1.6);
+    opacity: 0;
+  }
+  .btn-animated {
+    animation: moveInBottom 0.5s ease-out 0.75s;
+    animation-fill-mode: backwards;
+  }
+
+  @media screen and (min-width: 800px) {
+    .nav-center {
+      margin: 0 auto;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding: 1rem;
+    }
+    .nav-header {
+      padding: 0;
+    }
+    .nav-toggle {
+      display: none;
+    }
+    .links-container {
+      height: auto !important;
+    }
+    .links {
+      display: flex;
+    }
+    .links a {
+      padding: 0;
+      margin: 0 0.5rem;
+    }
+    .links a:hover {
+      padding: 0;
+      background: transparent;
+    }
+    .social-icons {
+      display: flex;
+      font-size: 20px;
+      
+    }
+   
+    .social-icons a {
+      margin: 0 0.5rem;
+      color: #007BFF;
+      transition: var(--transition);
+    }
+    .social-icons a:hover {
+      color: var(--clr-primary-7);
+    }
+  }
+  
+  .banner-text {
+    color: #fff;
+    animation: moveInLeft;
+    animation: ease-out;
+  }
+  
+  @media screen and (max-width: 790px) {
+    .social-icons{
+      display: none;
+    }
+    .img-container{
+      padding: 1rem;
+    }
+  }
+  @media screen and (min-width: 800px){
+    .img-container{
+      width:60%
+    }
+  }
+  /* Login */
+  
+  .container-login {
+    background-color: white;
+    border-radius: 7px;
+    display: block;
+    overflow: hidden;
+    box-shadow: 0px 12px 30px 6px rgba(66, 113, 164, 0.104891);
+    width: 437px;
+    margin:5% auto;
+    max-width: 100%;
+    height: 500px;
+    position: relative;
+  
+  }
+  .header {
+    text-align: center;
+    padding: 20px;
+    background-color: white;
+  }
+  .header h3 {
+    margin: 0;
+    font-size: 30px;
+    color: #007BFF;
+  }
+  .main-form {
+    padding: 30px 40px;
+  }
+  .form {
+    padding-bottom: 20px;
+    margin-bottom: 10px;
+    position: relative;
+  }
+  
+  .form input {
+    border: 2px solid #f0f0f0;
+    border-radius: 4px;
+    font-family: inherit;
+    width: 100%;
+    padding: 12px;
+    display: block;
+    font-size: 14px;
+    margin-top: 0.5rem;
+  }
+  .form input:focus {
+    outline: none !important;
+    border-color: #20b8eb;
+    box-shadow: 0 0 10px #20b8eb;
+  }
+  .form small {
+    position: absolute;
+    bottom: 0;
+    left: 5px;
+    visibility: hidden;
+  }
+  .login-btn {
+    width: 100%;
+    font-family: inherit;
+    font-size: 18px;
+    padding: 10px;
+    border-radius: 17px;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+    cursor: pointer;
+    color: white;
+    background-color: #007BFF;
+    list-style: none;
+    outline: none;
+    border: none;
+    transition: color 1000ms;
+    transition: background-color 500ms ease-in-out;
+  }
+  .login-btn:hover {
+    border: 1px solid red;
+    color: red;
+    background-color: transparent;
+  }
+  .label-text {
+    color: #a5a5a5;
+  }
+  .forget-password-container {
+    margin-top: 1.2rem;
+    text-align: center;
+  }
+  
+  .forget-password-container a {
+    text-decoration: none;
+    color: #4f88c7;
+  }
+  
+  .not_account_yet_container {
+    color: #a5a5a5;
+    text-align: center;
+    margin-top: 3rem;
+  }
+  .not_account_yet_container span {
+    color: #20b8eb;
+    cursor: pointer;
+  }
+  
+  .danger {
+    border-color: red !important;
+  }
+  .errors{
+    color: red;
+    margin: 0;
+  }
+  
+  /* Signup */
+  .container-sign {
+    background-color: white;
+    border-radius: 7px;
+    display: block;
+    overflow: hidden;
+    box-shadow: 0px 12px 30px 6px rgba(66, 113, 164, 0.104891);
+    width: 437px;
+    margin:5% auto;
+    max-width: 100%;
+    height: 790px;
+    position: relative;
+  
+  }
+  .form-sign{
+    position: relative;
+    padding-bottom: 10px;
+   
+  }
+  
+  .form-sign input {
+    border: 2px solid #f0f0f0;
+    border-radius: 4px;
+    font-family: inherit;
+    width: 100%;
+    padding: 12px;
+    display: block;
+    font-size: 14px;
+    margin-top: 0.5rem;
+  }
+  .form-sign input:focus {
+    outline: none !important;
+    border-color: #20b8eb;
+    box-shadow: 0 0 10px #20b8eb;
+  }
+  .form small {
+    position: absolute;
+    bottom: 0;
+    left: 5px;
+    visibility: hidden;
+  }
+  .Sign-btn{
+    width: 100%;
+    font-family: inherit;
+    font-size: 18px;
+    padding: 10px;
+    border-radius: 17px;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+    cursor: pointer;
+    color: white;
+    background-color: #007BFF;
+    list-style: none;
+    outline: none;
+    border: none;
+    transition: color 1000ms;
+    transition: background-color 500ms ease-in-out;
+    margin-top: 2rem;
+  }
+  /* Forget Password */
+  .container-forgetPass{
+    background-color: white;
+    border-radius: 7px;
+    display: block;
+    overflow: hidden;
+    box-shadow: 0px 12px 30px 6px rgba(66, 113, 164, 0.104891);
+    width: 437px;
+    margin:5% auto;
+    max-width: 100%;
+    height: 300px;
+    position: relative;
+  }
+  
+  /*
+  =============== 
+  How it works styling
+  ===============
+  */
+  .how-it-works-header{
+    color: rgb(0,0,0);
+    text-align: center;
+    margin-bottom: 4rem;
+  }
+  .how-it-works-header h1{
+    font-size: 45px;
+  }
+  .underline{
+    width: 60px;
+    height: 10px;
+    background-color:#007BFF;
+  }
+  .how-it-works-container{
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    min-height: 500px;
+  }
+  .how-it-works-container .first-child{
+    height: 200px;
+    border-radius: 1rem;
+    width: 350px;
+    padding: 1.5rem;
+    border: 1px solid rgb(229,229,227);
+    margin-bottom: 1.5rem;
+  }
+  .how-it-works-container .first-child:hover{
+    height: 200px;
+    border-radius: 1rem;
+    width: 350px;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+    padding: 1.5rem;
+    transform: scale(1.1);
+  }
+  .how-it-works-container .second-child{
+    height: 200px;
+    border-radius: 1rem;
+    width: 350px;
+    padding: 1.5rem;
+    border: 1px solid rgb(229,229,227);
+    margin-bottom: 1.5rem;
+  }
+  .how-it-works-container .second-child:hover{
+    height: 200px;
+    border-radius: 1rem;
+    width: 350px;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+    padding: 1.5rem;
+    transform: scale(1.1);
+  }
+  .how-it-works-container .third-child{
+    height: 200px;
+    border-radius: 1rem;
+    width: 350px;
+    padding: 1.5rem;
+    border: 1px solid rgb(229,229,227);
+    margin-bottom: 1.5rem;
+    
+  }
+  .how-it-works-container .third-child:hover{
+    height: 200px;
+    border-radius: 1rem;
+    width: 350px;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+    padding: 1.5rem;
+    transform: scale(1.1);
+  }
+  .how-it-works-container .fourth-child{
+    height: 200px;
+    border-radius: 1rem;
+    width: 350px;
+    padding: 1.5rem;
+    border: 1px solid rgb(229,229,227);
+  
+  }
+  .how-it-works-container .fourth-child:hover{
+    height: 200px;
+    border-radius: 1rem;
+    width: 350px;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+    padding: 1.5rem;
+    transform: scale(1.1);
+  }
+  .card-guide{
+    font-family: "Work Sans", sans-serif;
+  }
+  .img-container{
+    margin: 0 auto;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+  }
+  /*
+  =============== 
+  Car Listing Styling
+  ===============
+  */
+  .single-tour {
+    background: var(--clr-white);
+    border-radius: var(--radius);
+    margin: 2rem 0;
+    box-shadow: var(--light-shadow);
+    transition: var(--transition);
+    width: 400px;
+  }
+  .single-tour:hover {
+    box-shadow: var(--dark-shadow);
+  }
+  .single-tour img {
+    width: 100%;
+    height: 20rem;
+    object-fit: cover;
+    border-top-right-radius: var(--radius);
+    border-top-left-radius: var(--radius);
+  }
+  .tour-info {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 1.5rem;
+  }
+  .tour-info h4 {
+    margin-bottom: 0;
+  }
+  .single-tour button {
+    background: transparent;
+    border-color: transparent;
+    text-transform: capitalize;
+    color: var(--clr-primary-5);
+    font-size: 1rem;
+    cursor: pointer;
+    padding-left: 0.25rem;
+  }
+  .tour-price {
+    color: var(--clr-primary-5);
+    background: var(--clr-primary-10);
+    padding: 0.25rem 0.5rem;
+    border-radius: var(--radius);
+  }
+  .single-tour footer {
+    padding: 1.5rem 2rem;
+  }
+  .single-tour .delete-btn {
+    display: block;
+    width: 200px;
+    margin: 1rem auto 0 auto;
+    color: var(--clr-red-dark);
+    letter-spacing: var(--spacing);
+    background: transparent;
+    border: 1px solid var(--clr-red-dark);
+    padding: 0.25rem 0.5rem;
+    border-radius: var(--radius);
+  }
+  .flex-car{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-wrap: wrap;
+  }
+  .car-names{
+    font-size: 18px;
+      font-weight: 900;
+  }
+
+  /* TESTIMONIAL STYLING SECITON*/
+
+.avartar{
+  vertical-align: middle;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+}
+.img-section-name{
+  display: flex;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+
+
+  /* Animation */
+  @keyframes moveInLeft{
+    0%{
+      opacity: 0;
+      transform: translateX(-100px);
+    }
+    100%{
+      opacity: 1;
+      transform: translate(0);
+    }
+  }
+
+  
