--- a/src/index.css
+++ b/src/index.css
@@ -150,9 +150,9 @@ Variables
     overflow: hidden;
     transition: var(--transition);
   }
-  .show-container {
+  /* .show-container {
     height: 10rem;
-  }
+  } */
   
   
   .banner-text{
@@ -230,19 +230,7 @@ Variables
     animation: ease-out;
   }
   
-  @media screen and (max-width: 790px) {
-    .social-icons{
-      display: none;
-    }
-    .img-container{
-      padding: 1rem;
-    }
-  }
-  @media screen and (min-width: 800px){
-    .img-container{
-      width:60%
-    }
-  }
+ 
   /* Login */
   
   .container-login {
@@ -541,16 +529,19 @@ Variables
     border-top-right-radius: var(--radius);
     border-top-left-radius: var(--radius);
   }
-  .tour-info {
+
+  /* .tour-info {
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin-bottom: 1.5rem;
-  }
-  .tour-info h4 {
+  } */
+
+  /* .tour-info h4 {
     margin-bottom: 0;
-  }
-  .single-tour button {
+  } */
+
+  /* .single-tour button {
     background: transparent;
     border-color: transparent;
     text-transform: capitalize;
@@ -558,17 +549,19 @@ Variables
     font-size: 1rem;
     cursor: pointer;
     padding-left: 0.25rem;
-  }
-  .tour-price {
+  } */
+
+  /* .tour-price {
     color: var(--clr-primary-5);
     background: var(--clr-primary-10);
     padding: 0.25rem 0.5rem;
     border-radius: var(--radius);
-  }
+  } */
+
   .single-tour footer {
     padding: 1.5rem 2rem;
   }
-  .single-tour .delete-btn {
+  /* .single-tour .delete-btn {
     display: block;
     width: 200px;
     margin: 1rem auto 0 auto;
@@ -578,7 +571,7 @@ Variables
     border: 1px solid var(--clr-red-dark);
     padding: 0.25rem 0.5rem;
     border-radius: var(--radius);
-  }
+  } */
   .flex-car{
     display: flex;
     justify-content: space-evenly;
@@ -586,10 +579,10 @@ Variables
     flex-wrap: wrap;
    
   }
-  .car-names{
+  /* .car-names{
     font-size: 18px;
       font-weight: 900;
-  }
+  } */
 
   /* TESTIMONIAL STYLING SECITON*/
 
@@ -660,3 +653,18 @@ Variables
     }
   }
    
+   @media screen and (max-width: 790px) {
+     .social-icons {
+       display: none;
+     }
+
+     .img-container {
+       padding: 1rem;
+     }
+   }
+
+   @media screen and (min-width: 800px) {
+     .img-container {
+       width: 60%
+     }
+   }
