--- a/src/driversDashboard/DriversDashboardHome.css
+++ b/src/driversDashboard/DriversDashboardHome.css
@@ -1,5 +1,53 @@
-div.content {
-    margin-left: 25%;
-    padding: 1px 16px;
-    height: 1000px;
+.content {
+    /* margin-top: 60px; */
+   display: flex;
+   /* grid-template-columns: 20% 80%;   */
+   flex-direction: column;
+   width: 98%;
+    margin-left: 1%;
+    /* border: 2px solid black; */
+}
+
+.contents {
+    display: flex;
+    /* margin-top: 60px; */
+    width: 98%;
+    margin-left: 1%;
+ /* border: 2px solid black; */
+
+}
+
+.dcontainer{
+    display: flex;
+    flex-flow: wrap row;
+   width: 100%;
+    /* align-items:center; */
+}
+
+.flex-child{
+    /* flex-grow: 3; */
+    width: 23%;
+    height: 200px;
+    background-color: blue;
+    /* margin: 20px; */
+    margin-left: 1%;
+    margin-right: 1%;
+    color: white;
+    font-size: 2rem;
+}
+@media screen and (max-width: 1024px) {
+    .flex-child{
+        width: 48%;
+        margin-left: 1%;
+        margin-right: 1%;
+        margin-top: 10px;
+    }
+}
+@media screen and (max-width: 411px) {
+    .flex-child {
+        width: 98%;
+        margin-left: 1%;
+        margin-right: 1%;
+        margin-top: 10px;
+    }
 }
