--- a/src/driversDashboard/DriversNavbar.css
+++ b/src/driversDashboard/DriversNavbar.css
@@ -1,57 +1,62 @@
-ul.sidenav {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    width: 25%;
-    background-color: #f1f1f1;
-    position: fixed;
+.nav-link-container{
+    background-color: #000;
+    width: 200px;
     height: 100%;
-    overflow: auto;
 }
 
-ul.sidenav li a {
-    display: block;
-    color: #000;
-    padding: 8px 16px;
-    text-decoration: none;
+.nav-link-container a {
+     color:#fff;
+     display: block;
+     width: 100%;
+     line-height: 60px;
+     text-decoration: none;
+     padding-left: 40px;
+     box-sizing: border-box;
+
+}
+.nav-link-container .profile-imgage {
+    width: 100px;
+    height: 100px;
+    border-radius: 100px;
+    margin-bottom: 10px;
 }
 
-ul.sidenav li a.active {
-    background-color: #4CAF50;
-    color: white;
+.nav-link-container h4{
+    color: #ccc;
+    margin-top: 0;
+    margin-bottom: 20px;
+}
+.dashboard-layout{
+    display: grid;
+    grid-template-areas: "a a" 
+                         "b c";
+    grid-template-rows: 60px 100%;
+    grid-template-columns: 10% 89%;
+   
+}
+.dashboard-layout2{
+     display: grid;
+     grid-template-areas: "a a"
+     "b c";
+     grid-template-rows: 60px 100%;
+     grid-template-columns: 4% 96%;
+}
+.topnav{
+    grid-area: a;
+    
+}
+.sidenav{
+    grid-area: b;
+    
+   
+}
+.child{
+    grid-area: c; 
+   /* border: 3px solid blue; */
 }
 
-ul.sidenav li a:hover:not(.active) {
-    background-color: #555;
-    color: white;
-}
-
-/* div.content {
-    margin-left: 25%;
-    padding: 1px 16px;
-    height: 1000px;
-} */
-
-@media screen and (max-width: 900px) {
-    ul.sidenav {
-        width: 100%;
-        height: auto;
-        position: relative;
-    }
-
-    ul.sidenav li a {
-        float: left;
-        padding: 15px;
-    }
-
-    div.content {
-        margin-left: 0;
-    }
-}
-
-@media screen and (max-width: 400px) {
-    ul.sidenav li a {
-        text-align: center;
-        float: none;
+@media screen and (max-width: 1024px) {
+    .nav-link-container{
+        position: absolute;
     }
 }
