--- a/src/index.css
+++ b/src/index.css
@@ -50,12 +50,10 @@ Variables
   ===============
   */
   
-  *,
-  ::after,
-  ::before {
+  *{
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+        box-sizing: inherit;
   }
   body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
@@ -63,6 +61,7 @@ Variables
     color: var(--clr-grey-1);
     line-height: 1.5;
     font-size: 0.875rem;
+    box-sizing: border-box;
   }
   ul {
     list-style-type: none;
@@ -181,7 +180,7 @@ Variables
     font-size: 2rem;
     margin-bottom: 50px;
   }
-  .btn:link,
+   .btn:link,
   .btn:visited {
     text-transform: uppercase;
     text-decoration: none;
@@ -190,18 +189,18 @@ Variables
     border-radius: 100px;
     position: relative;
     bottom: 26px;
-  }
-  .btn:hover {
+  } 
+   .btn:hover {
     transform: translateY(-3px);
-  }
-  .btn:active {
+  } 
+   .btn:active {
     transform: translateY(-1px);
-  }
-  .btn-white {
+  } 
+   .btn-white {
     background-color: #007BFF;
     color: #777;
-  }
-  .btn::after {
+  } 
+   .btn::after {
     content: "";
     display: inline-block;
     height: 100%;
@@ -212,18 +211,18 @@ Variables
     left: 0;
     z-index: -1;
     transition: all 0.4s;
-  }
-  .btn-white::after {
+  } 
+   .btn-white::after {
     background-color: #007BFF;
-  }
-  .btn:hover::after {
+  } 
+   .btn:hover::after {
     transform: scaleX(1.5) scaleY(1.6);
     opacity: 0;
-  }
-  .btn-animated {
+  } 
+   .btn-animated {
     animation: moveInBottom 0.5s ease-out 0.75s;
     animation-fill-mode: backwards;
-  }
+  } 
 
   .banner-text {
     color: #fff;
@@ -258,6 +257,10 @@ Variables
     color: #007BFF;
   }
   .main-form {
+    padding: 30px 40px;
+  }
+
+  .main-formss {
     padding: 30px 40px;
   }
   .form {
@@ -343,21 +346,22 @@ Variables
   .not_account_yet_container {
     color: #a5a5a5;
     text-align: center;
-    margin-top: 3rem;
+    margin-top: 1rem;
+    margin-right: 4rem;
   }
   .not_account_yet_container span {
     color: #20b8eb;
     cursor: pointer;
   }
   
-  .danger {
+  /* .danger {
     border-color: red !important;
-  }
-  .errors{
+  } */
+  /* .errors{
     color: red;
     margin: 0;
   }
-  
+   */
   /* Signup */
   .container-sign {
     background-color: white;
@@ -368,7 +372,7 @@ Variables
     width: 437px;
     margin:1% auto;
     max-width: 100%;
-    height: 790px;
+    height: 830px;
     position: relative;
   
   }
@@ -672,10 +676,17 @@ Variables
       color: var(--clr-primary-7);
     }
   }
+
+ 
+  
    
    @media screen and (max-width: 790px) {
      .social-icons {
-       display: none;
+       display:block;
+     } 
+      .social-icons li a{
+       display: block;
+       margin-left: 15px;
      }
 
      .img-container {
