--- a/src/userdashboardPages/RideOffer.css
+++ b/src/userdashboardPages/RideOffer.css
@@ -1,10 +1,39 @@
-  .driver-component{
-     margin-left: 25%;
-     display: flex;
-     flex-wrap: wrap;
+   .driver-container{
+     margin-left: 22%;
  }
+.detail{
+    margin: 10px;
+}
+
+.button-contact{
+    margin-top:40px;
+    width:200px;
+    height:50px;
+    font-size:16px;
+    background-color:blue;
+    color: white;
+}
 
 
+.button-contact:hover {
+    background-color: #555;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*
 *,
 *:before,
 *:after {
@@ -48,22 +77,4 @@
     color: grey;
 }
 
-.button {
-    border: none;
-    outline: 0;
-    display: inline-block;
-    padding: 8px;
-    color: white;
-    background-color: blue;
-    text-align: center;
-    cursor: pointer;
-    width: 100%;
-}
-
-.button:hover {
-    background-color: #555;
-}  
-
-
-
-
+ */
