initial commit on this branch

--- a/src/components/LandingPage/driversSignup-login/DriversSignup.css
+++ b/src/components/LandingPage/driversSignup-login/DriversSignup.css
@@ -10,7 +10,7 @@
 }
 
 .imgbg-drivers-sign-in{
-     background-image: url('https://images.unsplash.com/photo-1465447142348-e9952c393450?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1268&q=80');
+     /* background-image: url('https://images.unsplash.com/photo-1465447142348-e9952c393450?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1268&q=80'); */
      background-position: center center;
      background-repeat: no-repeat;
      background-size: cover;
@@ -26,7 +26,7 @@
     width: 437px;
     margin: 1% auto;
     max-width: 100%;
-    height: 810px;
+    height: 710px;
     position: relative;
 }
 
@@ -60,7 +60,6 @@
     color: #a5a5a5;
 }
 
-/*  */
 .Sign-btn-pilot {
     width: 100%;
     font-family: inherit;
@@ -93,7 +92,7 @@
 }
 
 /* Start of next component */
-.register-car_container{
+/* .register-car_container{
     background-color: white;
     border-radius: 7px;
     display: block;
@@ -102,9 +101,9 @@
     width: 437px;
     margin: 1% auto;
     max-width: 100%;
-    height: 630px;
+    height: 700px;
     position: relative;
-}
+} */
 
 .vehicle-detals__form{
     padding: 30px 40px;
@@ -115,12 +114,12 @@
      padding-bottom: 10px;
 }
 
-.vehicle-label{
+/* .vehicle-label{
      color: #a5a5a5;
      font-size: 1.1rem;
-}
+} */
 
-.vehicle-details_container_div, input, select{
+/* .vehicle-details_container_div, input, select{
     border: 2px solid #f0f0f0;
     border-radius: 4px;
     font-family: inherit;
@@ -129,7 +128,7 @@
     display: block;
     font-size: 14px;
     margin-top: 0.5rem
-}
+} */
 
 .register-vehicle_btn{
      width: 100%;
