--- a/src/driversDashboard/DriversDashboardHome.css
+++ b/src/driversDashboard/DriversDashboardHome.css
@@ -1,27 +1,41 @@
-.content {
-   display: flex;
-   flex-direction: column;
-   width: 98%;
-   margin-left: 1%;
+.add-offer-container {
+    width: 90%;
+    height: 39vh;
+    margin: 3% auto;
+}
+.add_offer_container_content {
+    border: 1px solid #44ce6f;
+    width: 70%;
+    margin: 0 auto;
+    text-align: center;
+    height: 100%;
+}
+.add_offer_header{
+    background-color: #44ce6f;
+}
+.add_offer_inputs .offer_field {
+    margin: 1% 0;
+}
+.add_offer_inputs .offer_field input {
+    width: 70%;
+    margin: 5px auto;
+    border-radius: .5rem;
+    padding: 1% 0%;
+}
+.add_offer{
+    border-color: #44ce6f;
+    font-size: 1.3rem;
+    font-weight: 700;
+    padding: 10px 60px;
+    margin-top: 2%;
+}
+.add_offer:hover {
+    background-color:#44ce6f;
+    color: black;
 }
 
-.dcontainer{
-    display: flex;
-    flex-flow: wrap row;
-    width: 100%;
-}
 
-.flex-child{
-    width: 23%;
-    height: 200px;
-    background-color: blue;
-    margin-left: 1%;
-    margin-right: 1%;
-    color: white;
-    font-size: 2rem;
-}
-
-@media screen and (max-width: 1024px) {
+/* @media screen and (max-width: 1024px) {
     .flex-child{
         width: 48%;
         margin-left: 1%;
@@ -29,7 +43,7 @@
         margin-top: 10px;
     }
 }
-@media screen and (max-width: 411px) {
+@media screen and (max-width: 414px) {
     .flex-child {
         width: 99%;
         margin-left: 1%;
@@ -39,4 +53,4 @@
     .smsidebar{
         display:none;
     }
-}
+}  */
