--- a/src/driversDashboard/DriversNavbar.css
+++ b/src/driversDashboard/DriversNavbar.css
@@ -1,17 +1,25 @@
 .nav-link-container{
     background-color: #000;
     width: 200px;
-    height: 100%;
+    height: 100vh;
 }
 
 .nav-link-container a {
      color:#fff;
      display: block;
      width: 100%;
-     line-height: 60px;
+     line-height: 40px;
      text-decoration: none;
      padding-left: 40px;
      box-sizing: border-box;
+     position: relative;
+     top: .5%;
+}
+.nav-link-container a:hover {
+    background-color: #44ce6f;
+    color: black;
+    font-size: 1.2rem;
+    font-weight: 500;
 }
 
 .dashboard-layout{
