--- a/src/driversDashboard/Smallsidebar.css
+++ b/src/driversDashboard/Smallsidebar.css
@@ -1,7 +1,7 @@
 .smsidebar{
     height: 100vh;
     width: 40px;
-    background-color: black;
+    background-color: #44ce6f;
     color: white;
 }
 .fbicon{
