--- a/src/newdashboardUser/usersNavigationFolder/UsersSidebarNav.css
+++ b/src/newdashboardUser/usersNavigationFolder/UsersSidebarNav.css
@@ -1,18 +1,21 @@
 .user-nav-link-container {
-    background-color: black;
+    background-color: #000;
     height: 100vh;
     width: 200px;
 }
 
 .user-nav-link-container a {
-     color:#fff;
-     display: block;
-     width: 100%;
-     line-height: 50px;
-     text-decoration: none;
-     padding-left: 40px;
-     padding-top: 20px;
-     box-sizing: border-box;
+    color:#fff;
+    display: block;
+    width: 100%;
+    line-height: 30px;
+    text-decoration: none;
+    padding-left: 40px;
+    padding-top: 20px;
+    box-sizing: border-box;
+}
+.user-nav-link-container a:hover{
+    background-color: #44ce64;
 }
 
 .user-sidenav-container1 {
@@ -47,6 +50,7 @@
  @media screen and (max-width: 1024px){
      .user-nav-link-container {
          position: absolute;
+         z-index: 1;
      }
 } 
 
