--- a/src/newdashboardUser/usersNavigationFolder/UsersSmallNav.css
+++ b/src/newdashboardUser/usersNavigationFolder/UsersSmallNav.css
@@ -1,8 +1,8 @@
 .user-small-sidebar {
     height: 100vh;
     width: 40px;
-    background-color: #26BDFA;
-    color: white;
+    background-color: #fff;
+    color: #000;
 }
 
 .fbiconss {
