--- a/src/newdashboardUser/usersNavigationFolder/UsersTopNavigation.css
+++ b/src/newdashboardUser/usersNavigationFolder/UsersTopNavigation.css
@@ -1,5 +1,6 @@
 .nav-user-top{
-   background-color: #26BDFA;
+   background-color: #44ce6f;
+
    height: 70px;
    position: relative; 
    width: 100%;
@@ -7,7 +8,8 @@
 .me{
     display: inline;
     margin-top: 30px;
-     margin-left: 20px;
+    margin-left: 20px;
+    font-size: 20px;
 }
 
 .profile-container{
