Creating ride-request component

--- a/src/driversPages/MyOffer.css
+++ b/src/driversPages/MyOffer.css
@@ -1,52 +1,61 @@
-.my-offer-container{
-    display: flex;
-    width: 96%;
-    margin-left: 4%;
-}
-.offer-flex-container{
-    display: flex;
-    margin: 1% 0%;
-    width: 100%;
-    flex-wrap: wrap;
-}
-
-.offer-flex-item{
-    width: 32%;
-    margin: .7% .5%;
-    /* border: brown 1px solid; */
-    padding-left: .8%;
+.card-container{
+    width: 30%;
+    border: #44ce6f 1px solid;
+    margin-top: 2%;
+    margin-left: 1%;
     box-shadow: 0px 12px 30px 6px rgba(66, 113, 164, 0.104891);
 }
-.offer_content {
-    /* border: 1px solid black; */
-    margin-bottom: 1.9%;
-
-}
-.offer-info {
-    /* border: 1px solid yellowgreen; */
-    font-size: 1rem;
-    font-weight: 500;
-}
-.offer-info_1 {
-    font-weight: 700;
-    font-size: 1rem;
+.card-item{
+    /* border: 1px solid blue; */
+    display: flex;
+    width: 100%;
+    margin-top: 2%;
 }
 
- .offer_content button {
+.card-content-1 {
+    width: 26%;
+    margin-left: 1%;
+}
+.card-content_2 {
+    width: 72;
+    margin-left: 1%;
+}
+.card-actions {
+  display: flex;
+  justify-content: center;
+}
+.card-actions button {
+    padding: 8px 20px;
+    font-size: 1rem;
+    font-weight: 600;
+    margin: 5px 10px;
+    border: 2px solid #44ce6f;
+}
+.delete-card-offer-action {
+    background-color: crimson;
+}
+.edit-card-offer-action {
+    background-color: #44ce6f;
+}
+
+ /* .offer_content button {
     padding: 8px 16px;
     font-size: .9rem;
     font-weight: 600;
-} 
-.offer-actions {
+}  */
+
+/* .offer-actions {
     display: flex;
-    /* justify-content: center; */
-}
-button.offer-edit-action{
+    justify-content: center;
+} */
+
+/* button.offer-edit-action{
     background-color: gold;
-    width: 40%;
-}
-button.offer-delete-action{
+    width: 30%;
+} */
+
+/* button.offer-delete-action{
     background-color: red;
-    width: 40%;
+    width: 30%;
     margin-left: 4%;
-}
+} */
