--- a/src/userdashboardPages/Notification.css
+++ b/src/userdashboardPages/Notification.css
@@ -1,3 +1,8 @@
-.driver-component_container{
-    margin-left: 25%;
+.user-notification-container {
+    margin-left: 2%;
+    width: 98%;
+    margin-top: 1%;
+}
+.user-notification-container h1{
+    text-align: center;
 }
