--- a/src/userdashboardPages/RideOffer.css
+++ b/src/userdashboardPages/RideOffer.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400&display=swap');
 
 .car_list {
      width: 90vw;
@@ -28,7 +28,6 @@
 }
 
 .order__now {
-    /* background-color: lightblue; */
     border-color: #44ce6f;
     padding: 12px 20px;
     text-align: center;
@@ -56,11 +55,4 @@
         grid-template-columns: repeat(3, 1fr);
     }
 }
-
-
-
-
-
-
-
-
+ */
