--- a/src/components/LandingPage/Footer.css
+++ b/src/components/LandingPage/Footer.css
@@ -1,13 +1,13 @@
-.grand-container{
+/* .grand-container{
     margin: 0 auto;
-}
+} */
 .footer-parent{
-	color:whitesmoke;
+	color: #000;
 	opacity: 8;
 	width:100%;
 	margin: 0;
 	height: 468px;
-	background-color:  #0066F5;
+	background-color: #44ce6f;
     margin: 0 auto;
     display: flex;
     justify-content: center;
@@ -17,22 +17,25 @@
 	padding-top: 3rem;
 }
 
+.container1 .account-container h3, p{
+	color: black;
+	font-size: 1.2rem;
+	font-weight: 500;
+}
 .webinar-parent{
 	display: block;
 	font-size: x-large;
-	/* border-bottom: 2px solid whitesmoke; */
-	/* border-bottom-right-radius: 4rem; */
 	width: 55rem;
 	padding-bottom: 1.5rem;
-	border-bottom: 1px solid whitesmoke;
+	border-bottom: 1px solid #000;
 }
 .webinar-parent a{
 	margin-left: 1.3rem;
 	border-radius: 2px;
-	border: 3px solid wheat;
+	border: 1px solid #000;
 	text-decoration: none;
 	outline: none;
-	color:whitesmoke;
+	color: #000;
 	padding: 0.5rem;
 	
 }
@@ -47,13 +50,12 @@
 	
 }
 .account-container{
-	/* margin-right:15rem ; */
 	width:320px;
 	display: block;
 }
 
 .fab{
-	color:whitesmoke;
+	color: black;
 	transform: scaleX(2.6);
 	transform: scaleY(1.6);
 	padding-right: 1.5rem;
@@ -74,12 +76,9 @@
 @media screen and (max-width: 1024px){
 
 .footer-parent{
-		/* background: url(./header-bg.svg); */
-	color:  whitesmoke;
 	width:100%;
 	margin: 0;
 	height: 468px;
-		background-color:  #0066F5;
 }
 .footer-parent2{
 	justify-content: center;
@@ -90,38 +89,33 @@
 .webinar-parent{
 	display: block;
 	font-size: x-large;
-	/* border-bottom: 2px solid whitesmoke; */
-	/* border-bottom-right-radius: 4rem; */
 	width: 55rem;
 	padding-bottom: 1.5rem;
 	border-bottom: 1px solid whitesmoke;
 }
 .webinar-parent a{
-	margin-left: 1.3rem;
-	border-radius: 2px;
-	border: 3px solid wheat;
-	text-decoration: none;
-	outline: none;
-	color: whitesmoke;
-	padding: 0.5rem;
+  margin-left: 1.3rem;
+  border-radius: 2px;
+  border: 3px solid wheat;
+  text-decoration: none;
+  outline: none;
+  padding: 0.5rem;
 }
 
 .container1{
-	display: flex;
-	transform: translate( );
-	
+  display: flex;
+  transform: translate( );	
 }
+
 .account-container{
-	/* margin-right:15rem ; */
-	width:320px;
-	display: block;
+  width:320px;
+  display: block;
 }
 
 .fab{
-	color:whitesmoke;
-	transform: scaleX(2.6);
-	transform: scaleY(1.6);
-	padding-right: 1.5rem;
+  transform: scaleX(2.6);
+  transform: scaleY(1.6);
+  padding-right: 1.5rem;
 }
 
 .privacy-page{
@@ -130,66 +124,56 @@
 }
 
 .privacy-page li{
-	text-decoration: none;
-	list-style-type: none;
-	padding-right: 1.5rem;
+  text-decoration: none;
+  list-style-type: none;
+  padding-right: 1.5rem;
 }
-
-
 }
 
 @media screen and (max-width: 921px){
-
 .footer-parent{
-	background-color:  #0066F5;
 	width:100%;
 	margin: 0;
 	height: 468px;
     margin: 0 auto;
 }
 .footer-parent2{
-
-	justify-content: center;
-	margin: 0;
-	padding-left: 1.2rem;
-	padding-top: 3rem;
+  justify-content: center;
+  margin: 0;
+  padding-left: 1.2rem;
+  padding-top: 3rem;
 }
 
 .webinar-parent{
 	display: block;
 	font-size: x-large;
-	/* border-bottom: 2px solid whitesmoke; */
-	/* border-bottom-right-radius: 4rem; */
 	width: 39rem;
 	padding-bottom: 1.5rem;
 	border-bottom: 1px solid whitesmoke;
 }
 .webinar-parent a{
-	margin-left: 1.3rem;
-	border-radius: 2px;
-	border: 3px solid wheat;
-	text-decoration: none;
-	outline: none;
-	color: whitesmoke;
-	padding: 0.5rem;
+  margin-left: 1.3rem;
+  border-radius: 2px;
+  border: 3px solid wheat;
+  text-decoration: none;
+  outline: none;
+  padding: 0.5rem;
 }
 
 .container1{
-	display: flex;
-	transform: translate( );
-	
+  display: flex;
+  transform: translate( );	
 }
+
 .account-container{
-	/* margin-right:15rem ; */
-	width:232px;
-	display: block;
+  width:232px;
+  display: block;
 }
 
 .fab{
-	color:whitesmoke;
-	transform: scaleX(2.6);
-	transform: scaleY(1.6);
-	padding-right: 1.5rem;
+  transform: scaleX(2.6);
+  transform: scaleY(1.6);
+  padding-right: 1.5rem;
 }
 
 .privacy-page{
@@ -206,13 +190,8 @@
 
 }
 
-
-
 @media screen and (max-width: 750px){
-
 .footer-parent{
-	background-color:  #0066F5;
-	color: #ffffff;
 	width:100%;
 	margin: 0;
 	height: 760px;
@@ -226,45 +205,40 @@
 }
 
 .webinar-parent{
-	display: block;
-	font-size: x-large;
-	/* border-bottom: 2px solid whitesmoke; */
-	/* border-bottom-right-radius: 4rem; */
-	width: 43rem;
-	padding-bottom: 1.5rem;
-	border-bottom: 1px solid whitesmoke;
+  display: block;
+  font-size: x-large;
+  width: 43rem;
+  padding-bottom: 1.5rem;
+  border-bottom: 1px solid whitesmoke;
 }
 .webinar-parent a{
-	margin-left: 1.3rem;
-	border-radius: 2px;
-	border: 3px solid wheat;
-	text-decoration: none;
-	outline: none;
-	color: whitesmoke;
-	padding: 0.5rem;
+  margin-left: 1.3rem;
+  border-radius: 2px;
+  border: 3px solid wheat;
+  text-decoration: none;
+  outline: none;
+  padding: 0.5rem;
 }
 
 .container1{
-	display: block;
-	transform: translate( );
-	
+  display: block;
+  transform: translate( );	
 }
+
 .account-container{
-	/* margin-right:15rem ; */
-	width:232px;
-	display: block;
+  width:232px;
+  display: block;
 }
 
 .fab{
-	color:whitesmoke;
-	transform: scaleX(2.6);
-	transform: scaleY(1.6);
-	padding-right: 1.5rem;
+  transform: scaleX(2.6);
+  transform: scaleY(1.6);
+  padding-right: 1.5rem;
 }
 
 .privacy-page{
-	display: flex;
-	padding-top: 1.5rem;
+  display: flex;
+  padding-top: 1.5rem;
 }
 
 .privacy-page li{
@@ -277,55 +251,49 @@
 }
 
 @media screen and (max-width: 558px){
-	.main-webinar{
+    .main-webinar{
 		display: none;
 		margin: auto;
-		color:  #ffffff;
 	}
 
-.webinar-parent{
-	display: none;
-}
-.footer-parent{
-	/* background: url(./header-bg.svg); */
-	color: #ffffff;
-	width:100%;
-	margin: 0;
-	height: 800px;
-	background-color:  #0066F5;
-}
-.footer-parent2{
+	.webinar-parent{
+	    display: none;
+	}
+	.footer-parent{
+		width:100%;
+		margin: 0;
+		height: 800px;
+	}
+	.footer-parent2{
+		justify-content: center;
+		margin: 0;
+		padding-left: 1.2rem;
+		padding-top: 3rem;
+	}
 
-	justify-content: center;
-	margin: 0;
-	padding-left: 1.2rem;
-	padding-top: 3rem;
-}
-
-#let-start {
-align-items: center;
-display: contents;
-display: inline-block; 
-text-align: center;
-width: 95%;
-font-weight: 700;
-font-size: larger;
-margin: 0;
-padding-bottom: 1rem;
-text-rendering: optimizeLegibility;
-color:  whitesmoke;
-border-bottom: 1px solid seashell;
-}
+	#let-start {
+		align-items: center;
+		display: contents;
+		display: inline-block; 
+		text-align: center;
+		width: 95%;
+		font-weight: 700;
+		font-size: larger;
+		margin: 0;
+		padding-bottom: 1rem;
+		text-rendering: optimizeLegibility;
+		border-bottom: 1px solid seashell;
+	}
 
 	.privacy-page{
-	display: flex;
-	padding-top: 1.5rem;
-}
+		display: flex;
+		padding-top: 1.5rem;
+	}
 
-.privacy-page li{
-	text-decoration: none;
-	list-style-type: none;
-	padding-right: 1rem;
-}
+	.privacy-page li{
+		text-decoration: none;
+		list-style-type: none;
+		padding-right: 1rem;
+	}
 
 }
