--- a/src/components/LandingPage/driversSignup-login/DriversSignup.css
+++ b/src/components/LandingPage/driversSignup-login/DriversSignup.css
@@ -1,20 +1,12 @@
 .drivers-header {
     text-align: center;
     padding: 20px;
-    background-color: white;
+    background-color: #44ce6f
 }
 .drivers-header h3 {
     margin: 0;
     font-size: 30px;
-    color: #007BFF;
-}
-
-.imgbg-drivers-sign-in{
-     /* background-image: url('https://images.unsplash.com/photo-1465447142348-e9952c393450?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1268&q=80'); */
-     background-position: center center;
-     background-repeat: no-repeat;
-     background-size: cover;
-     height: 100%
+    color: #000;
 }
 
 .drivers-sign-in {
@@ -26,7 +18,7 @@
     width: 437px;
     margin: 1% auto;
     max-width: 100%;
-    height: 710px;
+    height: 730px;
     position: relative;
 }
 
@@ -69,7 +61,7 @@
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
     cursor: pointer;
     color: white;
-    background-color: #007BFF;
+    background-color: #44ce6f;
     list-style: none;
     outline: none;
     border: none;
@@ -87,23 +79,10 @@
 }
 
 .have-account span {
-    color: #20b8eb;
+    color: #44ce6f;
     cursor: pointer;
 }
 
-/* Start of next component */
-/* .register-car_container{
-    background-color: white;
-    border-radius: 7px;
-    display: block;
-    overflow: hidden;
-    box-shadow: 0px 12px 30px 6px rgba(66, 113, 164, 0.104891);
-    width: 437px;
-    margin: 1% auto;
-    max-width: 100%;
-    height: 700px;
-    position: relative;
-} */
 
 .vehicle-detals__form{
     padding: 30px 40px;
@@ -114,22 +93,6 @@
      padding-bottom: 10px;
 }
 
-/* .vehicle-label{
-     color: #a5a5a5;
-     font-size: 1.1rem;
-} */
-
-/* .vehicle-details_container_div, input, select{
-    border: 2px solid #f0f0f0;
-    border-radius: 4px;
-    font-family: inherit;
-    width: 100%;
-    padding: 12px;
-    display: block;
-    font-size: 14px;
-    margin-top: 0.5rem
-} */
-
 .register-vehicle_btn{
      width: 100%;
      font-family: inherit;
@@ -139,7 +102,7 @@
      box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
      cursor: pointer;
      color: white;
-     background-color: #007BFF;
+     background-color: #44ce6f;
      list-style: none;
      outline: none;
      border: none;
