--- a/src/driversPages/Accept_RejectOffer.css
+++ b/src/driversPages/Accept_RejectOffer.css
@@ -1,7 +1,7 @@
 .accept-reject-container {
     /* border: 1px solid black; */
     width: 30%;
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.7);
     box-shadow: 0px 12px 30px 6px rgba(16, 113, 164, 0.104891);
     color: #fff;
     font-size: 1.3rem;
@@ -17,9 +17,10 @@
 }
 
 .accept-reject-image {
-    width: 80px;
-    height: 80px;
+    width: 60px;
+    height: 60px;
     border-radius: 50%;
+    object-fit:cover;
 }
 
 .accept-reject-flex-container h4.passenger-name{
