--- a/src/newdashboardUser/usersNavigationFolder/UsersTopNavigation.css
+++ b/src/newdashboardUser/usersNavigationFolder/UsersTopNavigation.css
@@ -29,6 +29,12 @@
     text-align: center;
 }
 
+/* @media screen and (max-width: 1024px) {
+   .toggle-user{
+       display: inline;
+   }
+} */
+
 @media screen and (max-width: 415px) {
     .profile-container {
         right: 1;
