--- a/src/driversPages/Accept_RejectOffer.css
+++ b/src/driversPages/Accept_RejectOffer.css
@@ -1,19 +1,19 @@
+
 .accept-reject-container {
-    /* border: 1px solid black; */
-    width: 30%;
     background-color: rgba(0, 0, 0, 0.7);
     box-shadow: 0px 12px 30px 6px rgba(16, 113, 164, 0.104891);
     color: #fff;
     font-size: 1.3rem;
-    margin: 1% 1.5%;
+    margin-top: 0.5rem;
+    margin-bottom: 0.3125rem;
+    padding-bottom: 0.5rem;
 }
 
 .accept-reject-flex-container {
-    /* border: 1px solid red; */
     display: flex;
-    width: 98%;
-    padding: 1.5% 0;
-    margin-left: 2%;
+    padding-left: .5rem;
+    padding-top: 0.3rem;
+    padding-bottom: 0.2rem;
 }
 
 .accept-reject-image {
@@ -24,30 +24,84 @@
 }
 
 .accept-reject-flex-container h4.passenger-name{
-    /* border: 1px solid #fff; */
     margin-left: 3%;
     display: flex;
     align-items: center;
 }
 
-.passenger-to-driver {
-    margin-left: 2%;
-}
+/* .passenger-to-driver {
+    padding-left: .875rem;
+} */
 
 .accept-reject-flex-container button {
-    padding: 10px 36px;
+    padding: 0.5rem 1.875rem;
     font-size: 1.01em;
     color: #fff;
-    margin: 1% 5%;
 }
-button.accept-offer{
+
+button.not-accept-offer{
     background-color: green;
 }
 
-button.reject-offer {
-    background-color: red;
+button.accept-offer {
+    display: none;
 }
 
-.accept-reject-flex-container button:hover{
+button.not-reject-offer {
+    background-color: red;
+    margin-left: 0.8rem;
+}
+
+button.reject-offer {
+    display: none;
+}
+
+.not-start-trip{
+    display: none;
+}
+
+button.start-trip {
+    display: block;
+    border: none;
+    background-color: yellowgreen;
+    color: #fff;
+}
+
+.not-end-trip {
+    display: none;
+}
+
+button.end-trip{
+    display: block;
+    border: none;
+    background-color: yellow;
+    color: black;
+}
+
+.accept-reject-flex-container button:hover {
     cursor: pointer;
+}
+
+@media screen and (min-width: 768px) {
+    .request-ride-container {
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+    .accept-reject-container {
+      width: 500px;
+      margin-right: auto;
+      margin-left: auto;
+    }
+}
+
+@media(min-width: 1024px) {
+    .accept-reject-container {
+        width: 390px;
+       margin: 0;
+       margin-top: 0.3rem;
+       margin-bottom: 0.4rem;
+       margin-left: 0.6%;
+       margin-right: 0.2%;
+    }
 }
