--- a/src/driversPages/EditOffer.css
+++ b/src/driversPages/EditOffer.css
@@ -1,14 +1,14 @@
 .edit-offer-container-modal {
-    position: absolute;
-    top: 20%;
-    left: 22%;
+    position: fixed;
     box-shadow: 0px 12px 30px 6px rgba(66, 113, 164, 0.104891);
-    width: 50%;
-    
+    background-color: rgba(255, 255, 255, 0.4);
+    width: 100%;
+    z-index: 1000;
+    height: 100%;
 }
 .edit-offer-container-modal h1{
     text-align: center;
-    color: white;
+    color: #000;
 }
 
 .edit-offer-inputs-container {
@@ -18,16 +18,14 @@
     margin: 1% 0%;
 }
 .edit-offer-inputs-container label {
-    width: 12%;
-    font-size: 1.4rem;
+    width: 17.4rem;
+    font-size: 1.5rem;
     font-weight: 600;
-    margin-right: 28%;
-    color: white;
+    color: #f1f1f1;
 }
 
 .edit-offer-inputs-container input {
-    width: 40%;
-    padding: 10px 30px;
+    padding: 10px 16px;
     font-size: 1.1rem;
     font-weight: 600;
 }
@@ -46,4 +44,15 @@
 }
 .cancel {
     background-color: #44ce6f;
+}
+@media screen and (min-width: 768px) {
+    .edit-offer-inputs-container input, label {
+        width: 50%;
+        max-width: 28rem;
+    }
+    .edit-offer-inputs-container label {
+        width: 50%;
+        max-width: 28rem;
+        
+    }
 }
